--- a/meet.html
+++ b/meet.html
@@ -192,6 +192,7 @@ li{
                 api = new JitsiMeetExternalAPI(domain, options);
              });
         </script>
+	    <script data-ad-client="ca-pub-3808532177695973" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <div class="share">
         <button><a href="https://drive.google.com/uc?id=1_pEfAJzHXt4Ov4QSVxJxfYKKopkUFCsf&export=download"><i class="fa fa-download">Download App for Android</i></a></button>
         </div>
