--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <div class="join">
 <button><a href="meet.html"><i class="fa fa-sign-in">Join Meeting</i></a></button>
 </div>
+<script data-ad-client="ca-pub-3808532177695973" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
